# chip8-rs

./: .gitignore  Cargo.toml  build.rs
src/: lib.rs  main.rs
src/common/constants/: mod.rs
src/common/types/: mod.rs
src/common/types/clock_state/: mod.rs
src/common/types/primative/: mod.rs
src/common/types/storage/: mod.rs
src/common/types/storage/memory/: mod.rs  word_memory.rs
src/common/types/storage/register/: dword_register.rs  mod.rs  word_register.rs
src/controller/: mod.rs
src/controller/cpu/: mod.rs
src/controller/spu/: mod.rs
src/controller/timer/: mod.rs
src/resources/: mod.rs
src/resources/cpu/: instruction.rs  instruction_table.rs  mod.rs
src/resources/gpu/: mod.rs
src/resources/input/: mod.rs
src/resources/spu/: mod.rs  register.rs
src/resources/timer/: mod.rs
workspace/config/: log.yml
