[package]
name = "chip8_rs"
version = "0.1.0"
authors = ["Marco Satti <marcosatti@gmail.com>"]
build = "build.rs"

[[bin]]
name = "main"
doc = false
path = "src/main.rs"

[dependencies]
num = "0.1"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.8"
rand = "0.3"
log = "0.3"
log4rs = "0.7"
futures = "0.1"
futures-cpupool = "0.1"
sdl2 = "0.30"
parking_lot = "0.4"